bugfix: option was hidden by scrollbar
git-svn-id: http://www.molgenis.org/svn/molgenis/trunk@6403 42de9c89-b41c-0410-9fa9-f33e7b6bda7a

--- a/src/org/molgenis/framework/ui/res/css/xrefinput.css
+++ b/src/org/molgenis/framework/ui/res/css/xrefinput.css
@@ -13,5 +13,5 @@ div.xrefinput{
 }
 
 .xrefinput select{
-	overflow: scroll;
+	overflow: auto;
 }
